--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,7 +5,7 @@ clone:
 image: atlassian/default-image:2
 
 definitions:
-  
+
   export_image_env_vars: &export_image_env_vars |
     export IMAGE_TAGGED="${DOCKERHUB_REPO_OWNER}/loancalculator:bitbucket-$(git log -1 --pretty=%h)"
     export IMAGE_LATEST="${DOCKERHUB_REPO_OWNER}/loancalculator:bitbucket-latest"
@@ -23,7 +23,7 @@ definitions:
 
   steps:
 
-    - step: &merkely_declare_pipeline
+    - step: &merkely-declare-pipeline
         name: Declare Merkely Pipeline
         services: [ docker ]
         script:
@@ -37,7 +37,7 @@ definitions:
               MERKELY_API_TOKEN: ${MERKELY_API_TOKEN}
 
 
-    - step: &build_and_publish_docker_image
+    - step: &build-and-publish-docker-image
         name: Build and publish Docker image
         services: [ docker ]
         script:
@@ -49,7 +49,7 @@ definitions:
           - docker push ${IMAGE_LATEST}
 
 
-    - step: &merkely_log_docker_image
+    - step: &merkely-log-docker-image
         name: Log Docker image in Merkely
         services: [ docker ]
         script:
@@ -64,7 +64,7 @@ definitions:
               MERKELY_API_TOKEN: ${MERKELY_API_TOKEN}
 
 
-    - step: &run_unit_tests
+    - step: &run-unit-tests
         name: Run units tests
         services: [ docker ]
         script:
@@ -80,7 +80,7 @@ definitions:
           - build/test/**
 
 
-    - step: &merkely_log_unit_test_results
+    - step: &merkely-log-unit-test-results
         name: Log unit test results in Merkely
         services: [ docker ]
         script:
@@ -96,7 +96,7 @@ definitions:
               MERKELY_API_TOKEN: ${MERKELY_API_TOKEN}
 
 
-    - step: &run_security_tests
+    - step: &run-security-tests
         name: Run security tests
         services: [ docker ]
         script:
@@ -111,7 +111,7 @@ definitions:
           - build/security/**
 
 
-    - step: &merkely_log_security_test_results
+    - step: &merkely-log-security-test-results
         name: Log security test results in Merkely
         services: [ docker ]
         script:
@@ -127,7 +127,7 @@ definitions:
               MERKELY_API_TOKEN: ${MERKELY_API_TOKEN}
 
 
-    - step: &run_coverage_analysis
+    - step: &run-coverage-analysis
         name: Run coverage analysis
         services: [ docker ]
         script:
@@ -142,7 +142,7 @@ definitions:
           - build/coverage/**
 
 
-    - step: &merkely_log_coverage_analysis
+    - step: &merkely-log-coverage-analysis
         name: Log coverage analysis results in Merkely
         services: [ docker ]
         script:
@@ -160,13 +160,13 @@ definitions:
               MERKELY_API_TOKEN: ${MERKELY_API_TOKEN}
 
 
-    - step: &deploy_to_staging
+    - step: &deploy-to-staging
         name: Deploy to staging
         script:
           - echo YOUR DEPLOYMENT COMMAND HERE
 
 
-    - step: &merkely_log_deployment_to_staging
+    - step: &merkely-log-deployment-to-staging
         name: Log deployment to staging in Merkely
         services: [ docker ]
         script:
@@ -175,14 +175,14 @@ definitions:
             variables:
               MERKELY_COMMAND: log_deployment
               MERKELY_FINGERPRINT: ${MERKELY_FINGERPRINT}
-              MERKELY_DESCRIPTION: "Deployed to staging in pipeline"
+              MERKELY_DESCRIPTION: "Deployed to staging in bitbucket pipeline"
               MERKELY_ENVIRONMENT: staging
               MERKELY_OWNER: ${MERKELY_OWNER}
               MERKELY_PIPELINE: ${MERKELY_PIPELINE}
               MERKELY_API_TOKEN: ${MERKELY_API_TOKEN}
 
 
-    - step: &merkely_request_approval_for_deployment
+    - step: &merkely-request-approval-for-deployment
         name: Request approval for deployment in Merkely
         services: [ docker ]
         script:
@@ -193,7 +193,7 @@ definitions:
               MERKELY_FINGERPRINT: ${MERKELY_FINGERPRINT}
               MERKELY_OLDEST_SRC_COMMITISH: "origin/production"
               MERKELY_NEWEST_SRC_COMMITISH: ${BITBUCKET_COMMIT}
-              MERKELY_DESCRIPTION: "Production release requested"
+              MERKELY_DESCRIPTION: "Production release requested from bitbucket pipeline"
               MERKELY_IS_APPROVED: "TRUE"
               MERKELY_SRC_REPO_ROOT: ${PWD}
               MERKELY_OWNER: ${MERKELY_OWNER}
@@ -201,7 +201,7 @@ definitions:
               MERKELY_API_TOKEN: ${MERKELY_API_TOKEN}
 
 
-    - step: &merkely_check_deployment_approved
+    - step: &merkely-check-deployment-approved
         name: Check deployment to Production approved in Merkely
         services: [ docker ]
         trigger: manual
@@ -216,13 +216,13 @@ definitions:
               MERKELY_API_TOKEN: ${MERKELY_API_TOKEN}
 
 
-    - step: &deploy_to_production
+    - step: &deploy-to-production
         name: Deploy to Production
         script:
           - echo YOUR DEPLOYMENT COMMAND HERE
 
 
-    - step: &merkely_log_deployment_to_production
+    - step: &merkely-log-deployment-to-production
         name: Log deploy to Production in Merkely
         services: [ docker ]
         script:
@@ -231,14 +231,14 @@ definitions:
             variables:
               MERKELY_COMMAND: log_deployment
               MERKELY_FINGERPRINT: ${MERKELY_FINGERPRINT}
-              MERKELY_DESCRIPTION: "Deployed to production in pipeline"
+              MERKELY_DESCRIPTION: "Deployed to production in bitbucket pipeline"
               MERKELY_ENVIRONMENT: production
               MERKELY_OWNER: ${MERKELY_OWNER}
               MERKELY_PIPELINE: ${MERKELY_PIPELINE}
               MERKELY_API_TOKEN: ${MERKELY_API_TOKEN}
 
 
-    - step: &update_tracking_branch
+    - step: &update-tracking-branch
         name: Update tracking branch
         script:
           - git checkout --track origin/production
@@ -249,19 +249,19 @@ definitions:
 pipelines:
   branches:
     master:
-      - step: *merkely_declare_pipeline
-      - step: *build_and_publish_docker_image
-      - step: *merkely_log_docker_image
-      - step: *run_unit_tests
-      - step: *merkely_log_unit_test_results
-      - step: *run_security_tests
-      - step: *merkely_log_security_test_results
-      - step: *run_coverage_analysis
-      - step: *merkely_log_coverage_analysis
-      - step: *deploy_to_staging
-      - step: *merkely_log_deployment_to_staging
-      - step: *merkely_request_approval_for_deployment
-      - step: *merkely_check_deployment_approved
-      - step: *deploy_to_production
-      - step: *merkely_log_deployment_to_production
-      - step: *update_tracking_branch
+      - step: *merkely-declare-pipeline
+      - step: *build-and-publish-docker-image
+      - step: *merkely-log-docker-image
+      - step: *run-unit-tests
+      - step: *merkely-log-unit-test-results
+      - step: *run-security-tests
+      - step: *merkely-log-security-test-results
+      - step: *run-coverage-analysis
+      - step: *merkely-log-coverage-analysis
+      - step: *deploy-to-staging
+      - step: *merkely-log-deployment-to-staging
+      - step: *merkely-request-approval-for-deployment
+      - step: *merkely-check-deployment-approved
+      - step: *deploy-to-production
+      - step: *merkely-log-deployment-to-production
+      - step: *update-tracking-branch
