Update bitbucket-pipelines.yml after renaming master branch to main

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -247,7 +247,7 @@ definitions:
 
 pipelines:
   branches:
-    master:
+    main:
       - step: *merkely-declare-pipeline
       - step: *build-and-publish-docker-image
       - step: *merkely-log-docker-image
