--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -5,6 +5,10 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+env:
+  MERKELY_OWNER: compliancedb
+  MERKELY_PIPELINE: loancalculator
+
 jobs:
   build:
     runs-on: ubuntu-20.04
@@ -12,12 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-
-      - name: Add MERKELY_OWNER, MERKELY_PIPELINE to GITHUB_ENV
-        run: |
-          cat ./env-files/github.env >> ${GITHUB_ENV}
-
-
+      
       - name: Add Docker image names to GITHUB_ENV
         run: |
           echo "IMAGE_TAGGED=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator:$(git log -1 --pretty=%h)" >> ${GITHUB_ENV}
