--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           echo "IMAGE_TAGGED=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator:$(git log -1 --pretty=%h)" >> ${GITHUB_ENV}
           echo "IMAGE_LATEST=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator:latest" >> ${GITHUB_ENV}
-
+          echo "IMAGE=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator" >> ${GITHUB_ENV}
 
       - name: Download merkely cli client
           id: download-merkely-cli
@@ -35,30 +35,49 @@ jobs:
         env:
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
         run:
-          ./merkely pipeline declare --pipeline ${{ env.MERKELY_PIPELINE }}
+          ./merkely pipeline declare
             --description "The loan calculator application"
             --template "artifact,unit_test,security,coverage"
             --visibility public
 
 
-      - name: Build and publish Docker image
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_DEPLOY_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_DEPLOY_TOKEN }}
+
+
+      - name: Build and push Docker image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ env.IMAGE_TAGGED }}
+          cache-from: type=registry,ref=${{ env.IMAGE }}:buildcache
+          cache-to: type=registry,ref=${{ env.IMAGE }}:buildcache,mode=max
+          build-args: |
+            COMMIT_SHA=${{ github.sha }}
+
+
+      - name: Make the image digest available for following steps
+        id: digest-prep
         run: |
-          docker build --file ${PWD}/Dockerfile --tag ${{ env.IMAGE_TAGGED }} ${PWD}
-          docker tag ${{ env.IMAGE_TAGGED }} ${{ env.IMAGE_LATEST }}
-          echo ${{ secrets.DOCKERHUB_DEPLOY_TOKEN }} | docker login --username ${{ secrets.DOCKERHUB_DEPLOY_USERNAME }} --password-stdin
-          docker push ${{ env.IMAGE_TAGGED }}
-          docker push ${{ env.IMAGE_LATEST }}
+          ARTIFACT_SHA=$( echo ${{ steps.docker_build.outputs.digest }} | sed 's/.*://')
+          echo "DIGEST=$ARTIFACT_SHA" >> ${GITHUB_ENV}
+          echo ::set-output name=image-digest::${ARTIFACT_SHA}
 
 
       - name: Log Docker image in Merkely
-        uses: docker://merkely/change:latest
         env:
-          MERKELY_COMMAND: log_artifact
-          MERKELY_FINGERPRINT: docker://${{ env.IMAGE_TAGGED }}
-          MERKELY_IS_COMPLIANT: "TRUE"
-          MERKELY_OWNER: ${{ env.MERKELY_OWNER }}
-          MERKELY_PIPELINE: ${{ env.MERKELY_PIPELINE }}
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
+        run:
+          ./merkely pipeline artifact report creation ${{ env.IMAGE_TAGGED }}
+            --sha256 ${{ env.DIGEST }}
 
 
       - name: Run unit tests
@@ -74,15 +93,13 @@ jobs:
 
 
       - name: Log unit test results in Merkely
-        uses: docker://merkely/change:latest
         env:
-          MERKELY_COMMAND: log_test
-          MERKELY_FINGERPRINT: docker://${{ env.IMAGE_TAGGED }}
-          MERKELY_EVIDENCE_TYPE: unit_test
-          MERKELY_TEST_RESULTS_DIR: ${{ github.workspace }}/build/test
-          MERKELY_OWNER: ${{ env.MERKELY_OWNER }}
-          MERKELY_PIPELINE: ${{ env.MERKELY_PIPELINE }}
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
+        run:
+          ./merkely pipeline artifact report evidence test ${{ env.IMAGE_TAGGED }}
+            --evidence-type unit_test
+            --results-dir ${{ github.workspace }}/build/test
+            --sha256 ${{ env.DIGEST }}
 
 
       - name: Run security analysis
@@ -97,15 +114,13 @@ jobs:
 
 
       - name: Log security results in Merkely
-        uses: docker://merkely/change:latest
         env:
-          MERKELY_COMMAND: log_test
-          MERKELY_FINGERPRINT: docker://${{ env.IMAGE_TAGGED }}
-          MERKELY_EVIDENCE_TYPE: security
-          MERKELY_TEST_RESULTS_DIR: ${{ github.workspace }}/build/security
-          MERKELY_OWNER: ${{ env.MERKELY_OWNER }}
-          MERKELY_PIPELINE: ${{ env.MERKELY_PIPELINE }}
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
+        run:
+          ./merkely pipeline artifact report evidence test ${{ env.IMAGE_TAGGED }}
+            --evidence-type security
+            --results-dir ${{ github.workspace }}/build/security
+            --sha256 ${{ env.DIGEST }}
 
 
       - name: Run coverage
@@ -122,16 +137,13 @@ jobs:
 
 
       - name: Log coverage results in Merkely
-        uses: docker://merkely/change:latest
         env:
-          MERKELY_COMMAND: log_evidence
-          MERKELY_FINGERPRINT: docker://${{ env.IMAGE_TAGGED }}
-          MERKELY_EVIDENCE_TYPE: coverage
-          MERKELY_IS_COMPLIANT: "TRUE"
-          MERKELY_DESCRIPTION: ${{ env.COVERAGE_SUMMARY }}
-          MERKELY_OWNER: ${{ env.MERKELY_OWNER }}
-          MERKELY_PIPELINE: ${{ env.MERKELY_PIPELINE }}
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
+        run:
+          ./merkely pipeline artifact report evidence generic ${{ env.IMAGE_TAGGED }}
+            --description ${{ env.COVERAGE_SUMMARY }}
+            --evidence-type coverage
+            --sha256 ${{ env.DIGEST }}
 
 
       - name: Deploy to staging
@@ -140,12 +152,9 @@ jobs:
 
 
       - name: Log deployment to staging in Merkely
-        uses: docker://merkely/change:latest
         env:
-          MERKELY_COMMAND: log_deployment
-          MERKELY_FINGERPRINT: docker://${{ env.IMAGE_TAGGED }}
-          MERKELY_DESCRIPTION: "Deployed to staging in github pipeline"
-          MERKELY_ENVIRONMENT: staging
-          MERKELY_OWNER: ${{ env.MERKELY_OWNER }}
-          MERKELY_PIPELINE: ${{ env.MERKELY_PIPELINE }}
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
+        run:
+          ./merkely pipeline deployment report ${{ env.IMAGE_TAGGED }}
+            --environment staging
+            --sha256 ${{ env.DIGEST }}
