--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -98,7 +98,7 @@ jobs:
         run:
           ./merkely pipeline artifact report evidence test ${{ env.IMAGE_TAGGED }}
             --evidence-type unit_test
-            --results-dir ${{ github.workspace }}/build/test
+            --results-dir "${{ github.workspace }}/build/test"
             --sha256 ${{ env.DIGEST }}
 
 
@@ -119,7 +119,7 @@ jobs:
         run:
           ./merkely pipeline artifact report evidence test ${{ env.IMAGE_TAGGED }}
             --evidence-type security
-            --results-dir ${{ github.workspace }}/build/security
+            --results-dir "${{ github.workspace }}/build/security"
             --sha256 ${{ env.DIGEST }}
 
 
@@ -141,7 +141,7 @@ jobs:
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
         run:
           ./merkely pipeline artifact report evidence generic ${{ env.IMAGE_TAGGED }}
-            --description ${{ env.COVERAGE_SUMMARY }}
+            --description "${{ env.COVERAGE_SUMMARY }}"
             --evidence-type coverage
             --sha256 ${{ env.DIGEST }}
 
