--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -46,7 +46,7 @@ jobs:
           KOSLI_API_TOKEN: ${{ secrets.KOSLI_API_TOKEN }}
           KOSLI_JIRA_API_TOKEN: ${{ secrets.KOSLI_JIRA_API_TOKEN }}
         run:
-          kosli report evidence commit jira
+          kosli report evidence commit jira \
             --jira-base-url https://kosli-test.atlassian.net \
             --jira-username jon@kosli.com \
             --name jira
