--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,14 @@
-# Feed me!
+version: 2
+jobs:
+  build-publish:
+    machine:
+      image: ubuntu-2204:2023.04.2
+    steps:
+      - checkout
+      - run:
+          name: Do we have a git repo
+          command: |
+            git status
+            git log
+            git rev-parse HEAD
+            git rev-parse HEAD~42
