--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,6 @@ jobs:
           name: Do we have a git repo
           command: |
             git status
+            git log --pretty=format:'' | wc -l
             git rev-parse HEAD
             git rev-parse HEAD~42
