--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,10 @@ jobs:
       - run:
           name: Install kosli-cli  
           command: |
-            sh -c 'echo "deb [trusted=yes] https://apt.fury.io/kosli/ /"  > /etc/apt/sources.list.d/fury.list'
-            apt install ca-certificates
-            apt update
-            apt install kosli
+            sudo sh -c 'echo "deb [trusted=yes] https://apt.fury.io/kosli/ /"  > /etc/apt/sources.list.d/fury.list'
+            sudo apt install ca-certificates
+            sudo apt update
+            sudo apt install kosli
       - run: kosli version
       - checkout
 
