--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,6 @@ version: 2.1
 orbs:
   docker: circleci/docker@2.2.0
 
-# workflows:
-#   build-and-publish-docker-image:
-#     jobs:
-
-
 jobs:
   build:
     machine:
@@ -33,7 +28,7 @@ jobs:
       - run:
           name: Create Kosli Flow
           command: |
-            kosli create flow ${KOSLI_FLOW} \
+            kosli create flow \
               --description "The loan calculator application" \
               --template "jira" \
               --visibility public
