--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -136,9 +136,22 @@ jobs:
           echo YOUR DEPLOYMENT COMMAND HERE
 
 
-      - name: Log deployment to staging in Kosli
-        env:
-          KOSLI_API_TOKEN: ${{ secrets.KOSLI_API_TOKEN }}
-        run:
-          kosli expect deployment
-            --environment staging
+#      - name: Log deployment to staging in Kosli
+#        env:
+#          KOSLI_API_TOKEN: ${{ secrets.KOSLI_API_TOKEN }}
+#        run:
+#          kosli expect deployment
+#            --environment staging
+
+  jira-ticket-testing:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-22.04
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Find out branch name
+        run: |
+          set -x
+          echo "Branch name: ${{ github.head_ref }}"
+          echo "Commit: ${{ github.sha }}
