--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -153,6 +153,6 @@ jobs:
       - name: Find out branch name
         run: |
           set -x
-          echo "Event name: ${{ github.event_name }}
-          echo "Branch name: ${{ github.head_ref }}"
-          echo "Commit: ${{ github.sha }}
+          echo "github.event_name: ${{ github.event_name }}"
+          echo "github.head_ref: ${{ github.head_ref }}"
+          echo "github.sha: ${{ github.sha }}"
