--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -154,5 +154,8 @@ jobs:
         run: |
           set -x
           echo "github.event_name: ${{ github.event_name }}"
-          echo "github.head_ref: ${{ github.head_ref }}"
+          echo "github.ref: ${{ github.ref }}"
+          echo "github.event: ${{ github.event }}"
+          echo "github.event.pull_request: ${{ github.event.pull_request }}"
           echo "github.sha: ${{ github.sha }}"
+          echo ${{ toJSON(github) }}
