--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -151,6 +151,8 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Find out branch name
+        env:
+          GITHUB_EVENT: ${{ toJSON(github.event) }}
         run: |
           set -x
           echo "github.event_name: ${{ github.event_name }}"
@@ -158,4 +160,5 @@ jobs:
           echo "github.event: ${{ github.event }}"
           echo "github.event.pull_request: ${{ github.event.pull_request }}"
           echo "github.sha: ${{ github.sha }}"
-          echo ${{ toJSON(github) }}
+          echo $GITHUB_EVENT
+          
