--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -160,5 +160,5 @@ jobs:
           echo "github.event: ${{ github.event }}"
           echo "github.event.pull_request: ${{ github.event.pull_request }}"
           echo "github.sha: ${{ github.sha }}"
-          echo $GITHUB_EVENT
-          
+          set +x
+          echo $GITHUB_EVENT | jq
