--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -151,8 +151,14 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Find out branch name
+        env:
+          GITHUB_EVENT: ${{ toJSON(github.event) }}
         run: |
           set -x
           echo "github.event_name: ${{ github.event_name }}"
-          echo "github.head_ref: ${{ github.head_ref }}"
+          echo "github.ref: ${{ github.ref }}"
+          echo "github.event: ${{ github.event }}"
+          echo "github.event.pull_request: ${{ github.event.pull_request }}"
           echo "github.sha: ${{ github.sha }}"
+          set +x
+          echo $GITHUB_EVENT | jq
