--- a/.github/workflows/tag_with_jira_ticket.yml
+++ b/.github/workflows/tag_with_jira_ticket.yml
@@ -22,6 +22,8 @@ jobs:
           # more info: https://support.atlassian.com/jira-software-cloud/docs/what-is-an-issue/#Workingwithissues-Projectandissuekeys
           JIRA_TAG=$(echo "$BRANCH" | grep -oE '[A-Z][A-Z0-9]{1,9}-[0-9]+')
           if [ -n "$JIRA_TAG" ]; then
+            git config --global user.name "GitHub Actions"
+            git config --global user.email "actions@github.com"
             git tag -a "${JIRA_TAG}" -m "Added JIRA tag"
             git push origin --tags
             echo "Found jira ticket in branch name '${JIRA_TAG}'"
