--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -1,12 +1,11 @@
 name: 1/3 Main Pipeline
 
 on:
-  workflow_run:
-    workflows: ["Tag with jira ticket"]
-    types:
-      - completed
+#  workflow_run:
+#    workflows: ["Tag with jira ticket"]
+#    types:
+#      - completed
   push:
-  workflow_dispatch:
 
 env:
   KOSLI_ORG: kosli
@@ -160,10 +159,11 @@ jobs:
           GITHUB_ALL: ${{ toJSON(github) }}
         run: |
           set -x
+          git log --oneline --decorate --tags | head
           echo "github.event_name: ${{ github.event_name }}"
           echo "github.ref: ${{ github.ref }}"
           echo "github.event: ${{ github.event }}"
           echo "github.event.pull_request: ${{ github.event.pull_request }}"
           echo "github.sha: ${{ github.sha }}"
-          set +x
-          echo $GITHUB_ALL | jq
+          #set +x
+          #echo $GITHUB_ALL | jq
