--- a/.github/workflows/tag_with_jira_ticket.yml
+++ b/.github/workflows/tag_with_jira_ticket.yml
@@ -24,9 +24,8 @@ jobs:
           if [ -n "$JIRA_TAG" ]; then
             git config --global user.name "GitHub Actions"
             git config --global user.email "actions@github.com"
-            git tag -a "${JIRA_TAG}" -m "Added JIRA tag"
-            git push origin --tags
             echo "Found jira ticket in branch name '${JIRA_TAG}'"
+            git notes add -m "Jira ticket: ${JIRA_TAG}" ${{ github.sha }}
           else
             echo "No jira ticket in branch name"
           fi
