--- a/.github/workflows/tag_with_jira_ticket.yml
+++ b/.github/workflows/tag_with_jira_ticket.yml
@@ -26,7 +26,7 @@ jobs:
             git config --global user.email "actions@github.com"
             echo "Found jira ticket in branch name '${JIRA_TAG}'"
             git notes add -m "Jira ticket: ${JIRA_TAG}" ${{ github.sha }}
-            git push origin ${{ github.sha }}:refs/notes/
+            git push origin ${{ github.sha }}:refs/notes/commits
           else
             echo "No jira ticket in branch name"
           fi
